--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Le Mystère du Phare Perdu - Une histoire mystérieuse sur la côte bretonne">
     <title>Le Mystère du Phare Perdu</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,700;1,400&family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet">
@@ -153,6 +153,6 @@
         <i class="fas fa-arrow-up"></i>
     </button>
 
-    <script src="scripts/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
