--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <section id="gallery" class="gallery-section">
             <h2>Galerie</h2>
             <div class="gallery-grid">
-                <div class="gallery-item" style="background-image: url('assets/images/phare.jpg');">
+                <div class="gallery-item" style="background-image: url('phare.jpg');">
                     <div class="gallery-overlay">
                         <h3>Le Phare Abandonné</h3>
                     </div>
